# fridge

./: Cargo.toml  README.md  build.rs
fridge/: Cargo.toml
fridge/src/: config.rs  lib.rs  main.rs
resources/: ConfigHourlySnapshot.ui  ConfigMaxHourlySnapshots.ui  ConfigRemoteBackup.ui  ConfigRemoteDirectory.ui  ConfigRemoteHost.ui  ConfigRemoteUser.ui  HeaderBar.ui  PreferencesWindow.ui  Window.ui  resources.gresource.xml
settings/: co.veand.Fridge.gschema.xml
src/: config.rs  fridge.rs  lib.rs  main.rs
src/config_hourly_snapshot/: imp.rs  mod.rs
src/config_max_hourly_snapshots/: imp.rs  mod.rs
src/config_remote_backup/: imp.rs  mod.rs
src/config_remote_directory/: imp.rs  mod.rs
src/config_remote_host/: imp.rs  mod.rs
src/config_remote_user/: imp.rs  mod.rs
src/header_bar/: imp.rs  mod.rs
src/preferences_window/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
