[package]
name = "fridge"
version = "0.0.0"
edition = "2021"

[lib]
name = "fridge"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.5"
chrono = "0.4"
lazy_static = "1.4"
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"